knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_User_Setting__c/fields/pqcrush__Account_Plan_Task_Filter__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Account_Plan_Task_Filter__c</fullName>
    <description>Save filters for account plans</description>
    <inlineHelpText>Save filters for account plans</inlineHelpText>
    <label>Account Plan Task Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>