knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_User_Setting__c/fields/pqcrush__Objective_Task_Sort_Ascending__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Objective_Task_Sort_Ascending__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Objective Task Sort Ascending</label>
    <type>Checkbox</type>
</CustomField>