knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__pq_CRUSH_User_Setting__c/fields/pqcrush__Objective_Task_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Objective_Task_Sort_Field__c</fullName>
    <label>Objective Task Sort Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ActivityDate</fullName>
                <default>true</default>
                <label>Due Date</label>
            </value>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>CreatedDate</fullName>
                <label>Created Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>